tests/miniJava/neg/006484_mutation.MiniJava
class java { public static void Main ( String [ ] java ) public int [] java ( ) { return 0 ; } { } } }
